Fix image source path for logo in index.html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <body>
     <div class="container">
         <!-- Replace logo.png with your actual logo asset -->
-        <img src="/assets/FinalLogo.svg" alt="EzuraArc Logo" class="logo" />
+        <img src="assets/FinalLogo.svg" alt="EzuraArc Logo" class="logo" />
 
         <h1>EzuraArc</h1>
         <div class="tagline">Where Dreams Are Crafted to Reality</div>
