modified:   index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EzuraArc Private Limited</title>
 
+    <!-- Site icons and meta -->
+    <link rel="icon" href="assets/FinalLogo.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="assets/FinalLogo.svg">
+    <meta name="theme-color" content="#0A00A0">
+    <meta property="og:title" content="EzuraArc | Where Dreams Are Crafted to Reality">
+    <meta property="og:site_name" content="EzuraArc">
+    <meta property="og:image" content="assets/FinalLogo.svg">
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
