--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EzuraArc Private Limited</title>
+    <title>EzuraArc | Where Dreams Are Crafted to Reality</title>
 
     <!-- Site icons and meta -->
     <link rel="icon" href="assets/FinalLogo.svg" type="image/svg+xml">
@@ -14,8 +14,8 @@
     <meta property="og:site_name" content="EzuraArc">
     <meta property="og:image" content="assets/FinalLogo.svg">
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <!-- Google Font: DM Sans -->
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <style>
         :root {
@@ -30,7 +30,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
+            font-family: 'DM Sans', sans-serif;
         }
 
         body {
