modified:   index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Site icons and meta -->
     <link rel="icon" href="assets/FinalLogo.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="assets/FinalLogo.svg">
+    <link rel="canonical" href="https://www.ezuraarc.com/" />
     <meta name="theme-color" content="#0A00A0">
     <meta property="og:title" content="EzuraArc | Where Dreams Are Crafted to Reality">
     <meta property="og:site_name" content="EzuraArc">
